--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
-    "stripe": "^8.176.0"
+    "stripe": "^8.176.0",
+    "validator": "^13.7.0"
   }
 }
