--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.21.4",
     "body-scroll-lock": "^3.1.5",
     "dotenv": "^10.0.0",
+    "framer-motion": "^6.3.4",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "^17.0.2",
