--- a/client/package.json
+++ b/client/package.json
@@ -21,16 +21,15 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "body-scroll-lock": "^3.1.5",
-    "dotenv": "^10.0.0",
     "framer-motion": "^6.3.4",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "react": "^17.0.2",
+    "react": "^18.1.0",
     "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-simple-matchmedia": "^3.1.0",
     "react-toastify": "^8.1.0",
     "sass": "^1.32.12",
