--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,4 +1,4 @@
-name: CONTINOUS DEPLOYMENT
+name: CI/CD
 
 on: [push, pull_request]
 
@@ -16,13 +16,26 @@ jobs:
       - name: Run Build
         run: npm run build
         working-directory: client
- deploy:
+  test:
     runs-on: ubuntu-latest
-    needs: [build]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: bahmutov/npm-install@v1
+
+      - name: Install Dependencies
+        run: npm install
+        working-directory: client
+
+      - name: Run tests
+        run: yarn run test
+        working-directory: client
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [build, test]
     steps:
       - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "audiophile-e-commerce" # Must be unique in Heroku
+          heroku_app_name: "bag-2022" # Must be unique in Heroku
           heroku_email: "ashakur24@hotmail.com"
