--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -18,7 +18,7 @@ jobs:
         working-directory: client
   deploy:
     runs-on: ubuntu-latest
-    needs: [build, test]
+    needs: [build]
     steps:
       - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
