--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -24,5 +24,5 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "audiophile-e-commerce" # Must be unique in Heroku
-          heroku_email: "ashakur24@hotmail.com"
+          heroku_app_name: "e-commerce-2022" # Must be unique in Heroku
+          heroku_email: "ashakur.js24@gmail.com"
