--- a/client/package.json
+++ b/client/package.json
@@ -1,39 +1,37 @@
 {
-  "name": "audiophile",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
-    "@mui/icons-material": "^5.1.1",
-    "@mui/lab": "^5.0.0-alpha.51",
-    "@mui/material": "^5.0.4",
-    "@mui/styled-engine": "^5.0.1",
-    "@mui/styles": "^5.1.0",
-    "@reduxjs/toolkit": "^1.5.1",
-    "@stripe/react-stripe-js": "^1.5.0",
-    "@stripe/stripe-js": "^1.18.0",
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.4",
-    "body-scroll-lock": "^3.1.5",
-    "framer-motion": "^6.3.4",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.1",
-    "react": "^17.0.2",
-    "react-content-loader": "^6.0.3",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.88",
+    "@mui/material": "^5.8.6",
+    "@mui/styles": "^5.8.6",
+    "@mui/types": "^7.1.4",
+    "@stripe/react-stripe-js": "^1.9.0",
+    "@stripe/stripe-js": "^1.32.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.13",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^0.27.2",
+    "framer-motion": "^6.3.16",
+    "moment": "^2.29.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-query": "^3.39.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "react-simple-matchmedia": "^3.1.0",
-    "react-toastify": "^8.1.0",
-    "sass": "^1.32.12",
-    "stripe": "^8.176.0",
-    "web-vitals": "^1.1.1"
+    "react-toastify": "^9.0.5",
+    "sass": "^1.53.0",
+    "typescript": "^4.4.2",
+    "zustand": "^4.0.0-rc.1"
   },
   "scripts": {
     "start": "react-scripts start",
