--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "16.13.0"
+    "node": "16.15.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/index.js",
+    "server": "nodemon server/index.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
@@ -18,18 +19,18 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "express-session": "^1.17.2",
-    "helmet": "^4.6.0",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-session": "^1.17.3",
+    "helmet": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
-    "mkcert": "^1.4.0",
+    "mkcert": "^1.5.0",
     "morgan": "^1.10.0",
-    "passport": "^0.5.0",
+    "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
-    "pg": "^8.7.1",
-    "stripe": "^8.176.0",
+    "pg": "^8.7.3",
+    "stripe": "^9.11.0",
     "validator": "^13.7.0"
   }
 }
