--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.88",
     "@mui/material": "^5.8.6",
-    "@mui/styles": "^5.8.6",
+    "@mui/system": "^5.9.0",
     "@mui/types": "^7.1.4",
     "@stripe/react-stripe-js": "^1.9.0",
     "@stripe/stripe-js": "^1.32.0",
